--- a/themes/sagiri/_config.yml
+++ b/themes/sagiri/_config.yml
@@ -117,7 +117,7 @@ scheme: Pisces
 # Value after `||` delimeter is the name of FontAwesome icon. If icon (with or without delimeter) is not specified, globe icon will be loaded.
 social:
   GitHub: https://github.com/whalesink || <i class="fa fa-fw fa-github"></i>
-  QQ: tencent://message/?uin=754752529&Site=&Menu=yes || <i class="fa fa-fw fa-qq"></i>
+# QQ: tencent://message/?uin=754752529&Site=&Menu=yes || <i class="fa fa-fw fa-qq"></i>
 #  QQ 群: https://getrbq.com || <i class="fa fa-fw fa-qq"></i>
 #  Telegram 频道: https://t.me/awesomeDIYgod || <i class="fa fa-fw fa-telegram"></i>
 #  Telegram 群: https://t.me/prpr233 || <i class="fa fa-fw fa-telegram"></i>
@@ -826,7 +826,7 @@ footer:
 
 online_api: #wss://api.diygod.me/online/
 
-description: <span>人生到处知何似，</span><span>应似飞鸿踏雪泥</span>
+description: <span>心之所向，</span><span>素履所往</span>
 
 # Theme version
-version: 0.0.42
+version: 0.0.5
